[project]
name = "skin-lesion-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "h5py==3.15.1",
    "huggingface-hub==0.36.0",
    "ipykernel>=7.1.0",
    "ipywidgets==7.7.5",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "pillow==11.3.0",
    "polars==1.31.0",
    "safetensors==0.7.0",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "timm==1.0.22",
    "torch==2.9.0",
    "torchvision==0.24.0",
]

# Colab used CUDA 12.6 when models were trained
[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]] 
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
